--- a/contact.css
+++ b/contact.css
@@ -6,6 +6,9 @@ body{
 .topnav {
     overflow: hidden;
     background-color: rgb(37, 63, 85);
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   
 .topnav a {
@@ -24,6 +27,7 @@ body{
 h1{
     color: black;
     text-align: center;
+    margin-top: 50px;
 }
 .input{
     justify-content: center;
