--- a/about.css
+++ b/about.css
@@ -8,6 +8,9 @@ body{
 .topnav {
     overflow: hidden;
     background-color: rgb(37, 63, 85);
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   
 .topnav a {
@@ -29,6 +32,7 @@ h1{
     font-weight: 800;
     padding-left: 15px;
     background-color: antiquewhite;
+    margin-top: 50px;
 }
 
 /* Slideshow container */
