--- a/home.css
+++ b/home.css
@@ -7,7 +7,9 @@ body{
     overflow: hidden;
     background-color: rgb(37, 63, 85);
     position: fixed;
-  }
+    top: 0;
+    width: 100%;
+}
   
 .topnav a {
     float: left;
@@ -25,6 +27,7 @@ body{
 /* gonna make sure the the text is center */
 .title{
     text-align: center;
+    margin: 50px;
     
 }
 /* the content will display flex */
