--- a/schedule.css
+++ b/schedule.css
@@ -8,6 +8,9 @@ body{
 .topnav {
     overflow: hidden;
     background-color: rgb(37, 63, 85);
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   
 .topnav a {
@@ -30,4 +33,5 @@ h2{
     color: white;
     background-color: black;
     text-align: center;
+    margin-top: 50px;
 }
